[package]
name = "superfield-client"
version = "0.1.0"
authors = ["Satoshi Amemiya <satoshi_amemiya@voyagegroup.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.24"
squark = "^0.5.1"

[dependencies.web-sys]
version = "^0.3.1"
features = [
  "Window",
  "console"
]
